analysis complete before running on whole sample and before factor analysis complete.

--- a/notebooks/05_stats.ipynb
+++ b/notebooks/05_stats.ipynb
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "439b0844-2e9e-4671-93e7-f2550eb8c53d",
+   "id": "201ac6ec-99ac-4ae2-9023-542e35ebc6a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,26 +600,22 @@
     "        sns.despine(right=False)\n",
     "        ax2.set_ylabel('% of initial')\n",
     "    else:\n",
-    "        ax = df.plot(y=\"icc\", legend=False, color = 'black',linestyle = '--')\n",
-    "        ax.set_ylabel('icc', color = 'black')\n",
+    "        ax = df.plot(y=\"participant\", legend=False, color = sns.color_palette()[0])\n",
+    "        ax.set_ylabel('participant', color = sns.color_palette()[0])\n",
     "        ax2 = ax.twinx()\n",
     "        df.plot(y=\"session\", ax=ax2, legend=False, color = sns.color_palette()[1])\n",
     "        ax2.set_ylabel('session',color = sns.color_palette()[1])\n",
     "        ax3 = ax.twinx()\n",
     "        ax3.set_ylabel('residual',color = sns.color_palette()[2])\n",
-    "        ax3.spines[\"right\"].set_position((\"axes\", 1.2))\n",
+    "        ax3.spines[\"right\"].set_position((\"axes\", 1.15))\n",
     "        df.plot(y=\"residual\", ax=ax3, legend=False, color = sns.color_palette()[2])\n",
-    "        ax4 = ax.twinx()\n",
-    "        ax4.set_ylabel('participant',color = sns.color_palette()[0])\n",
-    "        df.plot(y=\"participant\", ax=ax4, legend=False, color = sns.color_palette()[0])\n",
-    "        ax4.spines[\"right\"].set_position((\"axes\", 1.4))\n",
+    "\n",
     "        sns.despine(right=False)\n",
+    "        ax.ticklabel_format(style='sci',scilimits=(0,0),axis='both')\n",
     "        ax2.ticklabel_format(style='sci',scilimits=(0,0),axis='both')\n",
     "        ax2.get_yaxis().get_offset_text().set_position((1,0))\n",
     "        ax3.ticklabel_format(style='sci',scilimits=(0,0),axis='both')\n",
-    "        ax3.get_yaxis().get_offset_text().set_position((1.2,0))\n",
-    "        ax4.ticklabel_format(style='sci',scilimits=(0,0),axis='both')\n",
-    "        ax4.get_yaxis().get_offset_text().set_position((1.4,0))\n",
+    "        ax3.get_yaxis().get_offset_text().set_position((1.15,0))\n",
     "    ax.xaxis.get_major_locator().set_params(integer=True)\n",
     "    return ax\n",
     "    \n",
@@ -639,6 +635,7 @@
     "        time_data.append(d)\n",
     "    df = pd.DataFrame(time_data, index = pd.Series(range(sessions-1)))\n",
     "    ax = df[['participant','session','residual']].plot.area(legend = legend)\n",
+    "    df['icc'].plot(color = 'white', linestyle = '--')\n",
     "    ax.xaxis.get_major_locator().set_params(integer=True)"
    ]
   }
