--- a/notebooks/21_validation_tasks.ipynb
+++ b/notebooks/21_validation_tasks.ipynb
@@ -207,85 +207,109 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>participant_id</th>\n",
+       "      <th>mov_id</th>\n",
+       "      <th>redcap_event_name</th>\n",
        "      <th>bx_dsfw_point</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>53</td>\n",
-       "      <td>11.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>67</td>\n",
-       "      <td>13.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>42</th>\n",
        "      <td>75</td>\n",
+       "      <td>m104</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
        "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>75</td>\n",
-       "      <td>12.0</td>\n",
+       "      <th>123</th>\n",
+       "      <td>85</td>\n",
+       "      <td>b029</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
+       "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>75</td>\n",
-       "      <td>11.0</td>\n",
+       "      <th>148</th>\n",
+       "      <td>90</td>\n",
+       "      <td>b002</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245</th>\n",
+       "      <td>114</td>\n",
+       "      <td>m001</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>147</td>\n",
+       "      <td>m064</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15671</th>\n",
+       "      <td>12179</td>\n",
+       "      <td>m284</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15728</th>\n",
+       "      <td>12199</td>\n",
+       "      <td>b289</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
+       "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15729</th>\n",
        "      <td>12205</td>\n",
+       "      <td>m282</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
        "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15749</th>\n",
        "      <td>12215</td>\n",
+       "      <td>m238</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
        "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15771</th>\n",
-       "      <td>12240</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15788</th>\n",
-       "      <td>12251</td>\n",
-       "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15804</th>\n",
        "      <td>12271</td>\n",
+       "      <td>b298</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
        "      <td>9.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1338 rows × 2 columns</p>\n",
+       "<p>515 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      participant_id  bx_dsfw_point\n",
-       "0                 53           11.0\n",
-       "17                67           13.0\n",
-       "42                75           11.0\n",
-       "44                75           12.0\n",
-       "45                75           11.0\n",
-       "...              ...            ...\n",
-       "15729          12205           11.0\n",
-       "15749          12215            9.0\n",
-       "15771          12240            9.0\n",
-       "15788          12251           11.0\n",
-       "15804          12271            9.0\n",
+       "      participant_id mov_id         redcap_event_name  bx_dsfw_point\n",
+       "42                75   m104  erhebungszeitpunkt_arm_1           11.0\n",
+       "123               85   b029  erhebungszeitpunkt_arm_1            9.0\n",
+       "148               90   b002  erhebungszeitpunkt_arm_1           10.0\n",
+       "245              114   m001  erhebungszeitpunkt_arm_1           10.0\n",
+       "334              147   m064  erhebungszeitpunkt_arm_1            6.0\n",
+       "...              ...    ...                       ...            ...\n",
+       "15671          12179   m284  erhebungszeitpunkt_arm_1           14.0\n",
+       "15728          12199   b289  erhebungszeitpunkt_arm_1            8.0\n",
+       "15729          12205   m282  erhebungszeitpunkt_arm_1           11.0\n",
+       "15749          12215   m238  erhebungszeitpunkt_arm_1            9.0\n",
+       "15804          12271   b298  erhebungszeitpunkt_arm_1            9.0\n",
        "\n",
-       "[1338 rows x 2 columns]"
+       "[515 rows x 4 columns]"
       ]
      },
      "execution_count": null,
@@ -294,7 +318,7 @@
     }
    ],
    "source": [
-    "ba[['participant_id','bx_dsfw_point']].dropna()"
+    "ba[['participant_id','mov_id','redcap_event_name','bx_dsfw_point']].dropna().query(\"redcap_event_name == 'erhebungszeitpunkt_arm_1'\")"
    ]
   },
   {
@@ -308,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94386d82-c4fb-4453-a925-58cd6f3b3cfe",
+   "id": "c807ee37-9eb8-49ad-b4a1-5d9c0603d249",
    "metadata": {},
    "outputs": [
     {
@@ -333,85 +357,109 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>participant_id</th>\n",
+       "      <th>mov_id</th>\n",
+       "      <th>redcap_event_name</th>\n",
        "      <th>bx_dsbw_point</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>53</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>67</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>42</th>\n",
        "      <td>75</td>\n",
+       "      <td>m104</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
        "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>75</td>\n",
-       "      <td>11.0</td>\n",
+       "      <th>123</th>\n",
+       "      <td>85</td>\n",
+       "      <td>b029</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>75</td>\n",
-       "      <td>11.0</td>\n",
+       "      <th>148</th>\n",
+       "      <td>90</td>\n",
+       "      <td>b002</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245</th>\n",
+       "      <td>114</td>\n",
+       "      <td>m001</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>147</td>\n",
+       "      <td>m064</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15671</th>\n",
+       "      <td>12179</td>\n",
+       "      <td>m284</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15728</th>\n",
+       "      <td>12199</td>\n",
+       "      <td>b289</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
+       "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15729</th>\n",
        "      <td>12205</td>\n",
+       "      <td>m282</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15749</th>\n",
        "      <td>12215</td>\n",
+       "      <td>m238</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
        "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15771</th>\n",
-       "      <td>12240</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15788</th>\n",
-       "      <td>12251</td>\n",
-       "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15804</th>\n",
        "      <td>12271</td>\n",
+       "      <td>b298</td>\n",
+       "      <td>erhebungszeitpunkt_arm_1</td>\n",
        "      <td>9.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1337 rows × 2 columns</p>\n",
+       "<p>515 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      participant_id  bx_dsbw_point\n",
-       "0                 53            6.0\n",
-       "17                67            9.0\n",
-       "42                75           11.0\n",
-       "44                75           11.0\n",
-       "45                75           11.0\n",
-       "...              ...            ...\n",
-       "15729          12205            8.0\n",
-       "15749          12215            6.0\n",
-       "15771          12240            8.0\n",
-       "15788          12251            9.0\n",
-       "15804          12271            9.0\n",
+       "      participant_id mov_id         redcap_event_name  bx_dsbw_point\n",
+       "42                75   m104  erhebungszeitpunkt_arm_1           11.0\n",
+       "123               85   b029  erhebungszeitpunkt_arm_1            7.0\n",
+       "148               90   b002  erhebungszeitpunkt_arm_1            7.0\n",
+       "245              114   m001  erhebungszeitpunkt_arm_1            7.0\n",
+       "334              147   m064  erhebungszeitpunkt_arm_1           10.0\n",
+       "...              ...    ...                       ...            ...\n",
+       "15671          12179   m284  erhebungszeitpunkt_arm_1           11.0\n",
+       "15728          12199   b289  erhebungszeitpunkt_arm_1            9.0\n",
+       "15729          12205   m282  erhebungszeitpunkt_arm_1            8.0\n",
+       "15749          12215   m238  erhebungszeitpunkt_arm_1            6.0\n",
+       "15804          12271   b298  erhebungszeitpunkt_arm_1            9.0\n",
        "\n",
-       "[1337 rows x 2 columns]"
+       "[515 rows x 4 columns]"
       ]
      },
      "execution_count": null,
@@ -420,7 +468,7 @@
     }
    ],
    "source": [
-    "ba[['participant_id','bx_dsbw_point']].dropna()"
+    "ba[['participant_id','mov_id','redcap_event_name','bx_dsbw_point']].dropna().query(\"redcap_event_name == 'erhebungszeitpunkt_arm_1'\")"
    ]
   },
   {
@@ -436,48 +484,39 @@
    "execution_count": null,
    "id": "6169f338-c4f7-4e9b-95bd-9cd007a7fe2c",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/raw/stroop_example.json','r') as f:\n",
+    "    stroop = json.load(f)\n",
+    "stroop = json.loads(stroop['data'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bb9a8bf-095e-4e9e-b965-aeee91ec3a47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example = pd.DataFrame(stroop).query('(trial_id==\"stim\") and (exp_stage==\"test\")')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "404bd22c-ed8c-4c4d-be71-70d3a14baae9",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'rt': -1,\n",
-       "  'stimulus': '<div class = centerbox><div class = fixation>+</div></div>',\n",
-       "  'key_press': -1,\n",
-       "  'possible_responses': 'none',\n",
-       "  'stim_duration': 500,\n",
-       "  'block_duration': 500,\n",
-       "  'timing_post_trial': 500,\n",
-       "  'trial_id': 'fixation',\n",
-       "  'trial_type': 'poldrack-single-stim',\n",
-       "  'trial_index': 3,\n",
-       "  'time_elapsed': 86421,\n",
-       "  'internal_node_id': '0.0-2.0',\n",
-       "  'exp_stage': 'practice',\n",
-       "  'exp_id': 'stroop',\n",
-       "  'full_screen': True,\n",
-       "  'focus_shifts': 0},\n",
-       " {'rt': 1146,\n",
-       "  'correct': True,\n",
-       "  'stimulus': '<div class = centerbox><div class = stroop-stim style = \"color:blue\">BLAU</div></div>',\n",
-       "  'key_press': 66,\n",
-       "  'correct_response': 66,\n",
-       "  'possible_responses': [66, 71, 82],\n",
-       "  'stim_duration': 1500,\n",
-       "  'block_duration': 1500,\n",
-       "  'feedback_duration': 500,\n",
-       "  'timing_post_trial': 250,\n",
-       "  'trial_id': 'stim',\n",
-       "  'condition': 'congruent',\n",
-       "  'stim_color': 'blue',\n",
-       "  'stim_word': 'blue',\n",
-       "  'trial_type': 'poldrack-categorize',\n",
-       "  'trial_index': 4,\n",
-       "  'time_elapsed': 88938,\n",
-       "  'internal_node_id': '0.0-3.0',\n",
-       "  'exp_stage': 'practice',\n",
-       "  'exp_id': 'stroop',\n",
-       "  'full_screen': True,\n",
-       "  'focus_shifts': 0}]"
+       "Index(['text', 'rt', 'key_press', 'block_duration', 'timing_post_trial',\n",
+       "       'trial_id', 'trial_type', 'trial_index', 'time_elapsed',\n",
+       "       'internal_node_id', 'exp_id', 'full_screen', 'focus_shifts',\n",
+       "       'view_history', 'stimulus', 'possible_responses', 'stim_duration',\n",
+       "       'exp_stage', 'correct', 'correct_response', 'feedback_duration',\n",
+       "       'condition', 'stim_color', 'stim_word', 'responses', 'credit_var'],\n",
+       "      dtype='object')"
       ]
      },
      "execution_count": null,
@@ -486,9 +525,7 @@
     }
    ],
    "source": [
-    "with open('../data/raw/stroop_example.json','r') as f:\n",
-    "    stroop = json.load(f)\n",
-    "json.loads(stroop['data'])[3:5]"
+    "example.columns"
    ]
   },
   {
@@ -686,6 +723,14 @@
    "source": [
     "pd.Series([x[0] for x in mat['bhPDG']]).plot()\n",
     "sns.despine()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cdc876d-09f5-4a9c-9c9e-4aa038efdc09",
+   "metadata": {},
+   "source": [
+    "## SST"
    ]
   }
  ],
