--- a/notebooks/02_gbe.data_provider.ipynb
+++ b/notebooks/02_gbe.data_provider.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "#export\n",
     "import numpy as np\n",
-    "from ..data_provider import DataProvider, get_efficiently\n",
+    "from trr265.data_provider import DataProvider, get_efficiently\n",
     "from fastcore.foundation import patch\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
@@ -216,38 +216,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>m275</th>\n",
+       "      <th>m297</th>\n",
        "      <td>False</td>\n",
-       "      <td>2021-12-13</td>\n",
-       "      <td>2021-12-13 13:14:20</td>\n",
+       "      <td>2021-07-12</td>\n",
+       "      <td>2021-07-12 19:29:55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>m276</th>\n",
+       "      <th>m299</th>\n",
        "      <td>False</td>\n",
-       "      <td>2021-12-20</td>\n",
-       "      <td>2021-12-20 11:03:56</td>\n",
+       "      <td>2022-03-06</td>\n",
+       "      <td>2022-03-06 16:47:02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>m279</th>\n",
+       "      <th>m300</th>\n",
        "      <td>False</td>\n",
-       "      <td>2022-01-10</td>\n",
-       "      <td>2022-01-10 09:11:45</td>\n",
+       "      <td>2022-03-14</td>\n",
+       "      <td>2022-03-14 18:24:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>m280</th>\n",
+       "      <th>m301</th>\n",
        "      <td>False</td>\n",
-       "      <td>2022-01-10</td>\n",
-       "      <td>2022-01-10 14:11:32</td>\n",
+       "      <td>2022-03-14</td>\n",
+       "      <td>2022-03-14 11:05:02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>m281</th>\n",
+       "      <th>m302</th>\n",
        "      <td>False</td>\n",
-       "      <td>2021-09-06</td>\n",
-       "      <td>2021-09-28 12:00:01</td>\n",
+       "      <td>2022-03-21</td>\n",
+       "      <td>2022-03-21 06:40:32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>477 rows × 3 columns</p>\n",
+       "<p>514 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -259,13 +259,13 @@
        "b013               True    2020-06-28 2020-07-07 18:27:42\n",
        "b015               True    2020-06-21 2020-06-29 18:31:58\n",
        "...                 ...           ...                 ...\n",
-       "m275              False    2021-12-13 2021-12-13 13:14:20\n",
-       "m276              False    2021-12-20 2021-12-20 11:03:56\n",
-       "m279              False    2022-01-10 2022-01-10 09:11:45\n",
-       "m280              False    2022-01-10 2022-01-10 14:11:32\n",
-       "m281              False    2021-09-06 2021-09-28 12:00:01\n",
+       "m297              False    2021-07-12 2021-07-12 19:29:55\n",
+       "m299              False    2022-03-06 2022-03-06 16:47:02\n",
+       "m300              False    2022-03-14 2022-03-14 18:24:33\n",
+       "m301              False    2022-03-14 2022-03-14 11:05:02\n",
+       "m302              False    2022-03-21 2022-03-21 06:40:32\n",
        "\n",
-       "[477 rows x 3 columns]"
+       "[514 rows x 3 columns]"
       ]
      },
      "execution_count": null,
@@ -274,6 +274,7 @@
     }
    ],
    "source": [
+    "dp = GBEProvider('/Users/hilmarzech/Projects/trr265/trr265/data/')\n",
     "df = dp.get_gbe_from_movisense()\n",
     "df = dp.define_initial_dataset(df)\n",
     "df.groupby('participant')[['is_initial','starting_date','trigger_date']].first()"
@@ -3334,7 +3335,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   }
