--- a/notebooks/04_gbe.wm.scoring.ipynb
+++ b/notebooks/04_gbe.wm.scoring.ipynb
@@ -1518,7 +1518,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   }
