--- a/notebooks/01_data_provider.ipynb
+++ b/notebooks/01_data_provider.ipynb
@@ -71,7 +71,7 @@
     "        self.mov_mannheim_starting_dates_path = os.path.join(self.raw, \"starting_dates_m.html\")\n",
     "        self.alcohol_per_drink_path = os.path.join(self.external,'alcohol_per_drink.csv')\n",
     "\n",
-    "        \n",
+    "\n",
     "#export\n",
     "def get_efficiently(func):\n",
     "    \"\"\"\n",
@@ -252,7 +252,7 @@
     "        dd_screeners = sorted(list(set(dd_screeners)))\n",
     "        return dd_screeners\n",
     "    dd_screeners = clean_screeners(dd_screeners)\n",
-    "    \n",
+    "\n",
     "    b07_screeners = ['ann-kathrin stock','charlotte blum','josephine kirschgens','klara macht','borchardt','marta ledro','miriam petasch','mona hofmann','theo tester']\n",
     "    s01_screeners = ['esther preuschhof', 'miriam schmitz', 'sebastian möricke', 'jessica zimmermann', 'leonard visser', 'anna-lena lünert', 'anne dörfler', 'dominic reichert', 'maike borchardt', 'dorothee scheuermann', 'paula böhlmann', 'alice','josephine kirschgens maxi stiller', 'maria schießl', '22.10.2021', 'sascha', '03.08.2021', 'mariana plumbohm', 'caroline neumer', '04.08.2021', 'maxi stiller', 'sacsha', '09.08.2021', 'ml', 'charlotte', 'charlotte heinze', 'shereen', 'test', \"charlotte heinze\", 'benedikt']\n",
     "    known_dd_screeners = list(b07_screeners+s01_screeners)\n",
@@ -262,10 +262,10 @@
     "    # In general, if a screener from a project was involved, it was screened for that project\n",
     "    df['screened_for_b07'] = (df.center=='d') & (df.screen_caller.str.contains('|'.join(b07_screeners)))\n",
     "    df['screened_for_s01'] = (df.center!='d') | (df.screen_caller.str.contains('|'.join(s01_screeners)))\n",
-    "    \n",
+    "\n",
     "    # We also exclude participants screened for C02 in Berlin\n",
     "    df.loc[(df.screen_purpose == 4) & (df.center=='b'), 'screened_for_s01'] = False\n",
-    "    \n",
+    "\n",
     "    # Additionally, we also set it to true if it was specifically set\n",
     "    df.loc[df.screen_site_dd == 1, 'screened_for_s01'] = True\n",
     "    df.loc[df.screen_site_dd == 3, 'screened_for_s01'] = True\n",
@@ -338,7 +338,7 @@
     "            return np.nan\n",
     "    '''This function automatically adjust data types of redcap data based on the redcap codebooks'''\n",
     "    # Parsing type\n",
-    "    codebook['type'] = codebook[\"Feld Attribute (Feld-Typ, Prüfung, Auswahlen, Verzweigungslogik, Berechnungen, usw.)\"].apply(lambda x: x.split(',')[0]) \n",
+    "    codebook['type'] = codebook[\"Feld Attribute (Feld-Typ, Prüfung, Auswahlen, Verzweigungslogik, Berechnungen, usw.)\"].apply(lambda x: x.split(',')[0])\n",
     "    # Descriptives (not in data)\n",
     "    desc_columns = list(codebook[codebook.type.str.contains('descriptive')].variable)\n",
     "    # Datetime\n",
@@ -373,7 +373,7 @@
     "            data[c] = data[c].apply(number_or_nan).astype(float)\n",
     "            print(\"Values with wrong dtype in %s\"%c)\n",
     "    data[text_columns] = data[text_columns].astype(str).replace('nan',np.nan)\n",
-    "    \n",
+    "\n",
     "    for c in dt_columns:\n",
     "        data[c] = pd.to_datetime(data[c])\n",
     "    return data"
@@ -408,7 +408,7 @@
     "    df['center'] = df.screen_site.replace({1:'b',2:'d',3:'m'})\n",
     "    df['screen_date'] = pd.to_datetime(df['screen_date'], errors = 'coerce')\n",
     "    #display(df[df.screen_caller.isna()])\n",
-    "    df = self.determine_phone_b07(df)    \n",
+    "    df = self.determine_phone_b07(df)\n",
     "    return df"
    ]
   },
@@ -506,7 +506,7 @@
     "        df[new_id] = df.center + df[new_id].astype('str').str.strip('0').str.strip('.').apply(lambda x: x.zfill(3))\n",
     "        df[new_id].fillna('nan',inplace = True)\n",
     "        df.loc[df[new_id].str.contains('nan'),new_id] = np.nan\n",
-    "    # Removing test participants \n",
+    "    # Removing test participants\n",
     "    remove = ['050744', 'hdfghadgfh', 'LindaEngel', 'test', 'Test001', 'Test001a', 'test0011', 'test0012', 'test0013', 'test0014', 'test0015', 'test002', 'test00229', 'test007', 'test01', 'test012', 'test013', 'test1', 'test2', 'test4', 'test12', 'test999', 'test2021', 'test345345', 'testneu', 'testtest', 'test_0720', 'test_10', 'test_GA', 'Test_JH','test0016','891752080', 'pipingTest', 'test0001', 'test00012', 'test0012a', 'test0015a', 'test0017', 'test10', 'test20212', 'testJohn01', 'test_00213', 'test_00233', 'test_00271', 'test_003', 'test_004', 'test_11_26', 'Test_MS','898922899', 'tesst', 'test0002', 'test0908', 'test092384750398475', 'test43', 'test123', 'test1233', 'test3425', 'test123456', 'test1234567', 'testfu3', 'test_888', 'test_999', 'test_98375983745', 'Test_Übung','050335', 'test003', 'test02', 'test111', 'test1111', 'test1234','test0000', 'test_CH','50744', 'test0001a', 'test004', 'test03', 'tets']\n",
     "    df = df[~df.participant_id.astype(str).isin(remove)]\n",
     "    # Checking participant ids (to find new test participants)\n",
@@ -519,12 +519,12 @@
     "    # Setting dtypes based on codebook\n",
     "    df = self.set_dtypes(df, self.get_ba_codebook())\n",
     "    # Creating convenience variables\n",
-    "    df['is_female'] = df.screen_gender.replace({1:0,2:1,3:np.nan})\n",
+    "    df['is_female'] = df.screen_gender.replace({1:1,2:0,3:np.nan})\n",
     "    # Filling in missings from baseline\n",
     "    df['is_female'].fillna(df.bx_sozio_gender.replace({1:0,2:1,3:np.nan}), inplace = True)\n",
     "    df['is_female'] = df.groupby('participant_id')['is_female'].transform(lambda x: x.ffill().bfill())\n",
     "    df['is_female'] = df['is_female'].astype(float)\n",
-    "    \n",
+    "\n",
     "    return df"
    ]
   },
@@ -553,6 +553,238 @@
    "source": [
     "check_ba = dp.get_ba_data()[['participant_id','redcap_event_name','redcap_repeat_instrument','redcap_repeat_instance']].value_counts().mean() == 1\n",
     "assert check_ba, \"Redcap BA data was not properly formatted\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38890fae-8f77-45a0-8453-0e72be69809d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bx_sozio_gender</th>\n",
+       "      <th>screen_gender</th>\n",
+       "      <th>is_female</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9353</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9354</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9355</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9356</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9357</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9358</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9359</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9360</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9361</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9362</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9363</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9364</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9365</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9366</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9367</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9368</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9369</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9370</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9371</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9372</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9373</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9374</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9375</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9376</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9377</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9378</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      bx_sozio_gender  screen_gender  is_female\n",
+       "9353              1.0            2.0        1.0\n",
+       "9354              NaN            NaN        1.0\n",
+       "9355              NaN            2.0        1.0\n",
+       "9356              NaN            2.0        1.0\n",
+       "9357              NaN            2.0        1.0\n",
+       "9358              NaN            NaN        1.0\n",
+       "9359              NaN            NaN        1.0\n",
+       "9360              NaN            NaN        1.0\n",
+       "9361              NaN            NaN        1.0\n",
+       "9362              NaN            NaN        1.0\n",
+       "9363              NaN            NaN        1.0\n",
+       "9364              NaN            NaN        1.0\n",
+       "9365              NaN            NaN        1.0\n",
+       "9366              NaN            NaN        1.0\n",
+       "9367              NaN            NaN        1.0\n",
+       "9368              NaN            NaN        1.0\n",
+       "9369              NaN            NaN        1.0\n",
+       "9370              NaN            NaN        1.0\n",
+       "9371              NaN            NaN        1.0\n",
+       "9372              NaN            NaN        1.0\n",
+       "9373              NaN            NaN        1.0\n",
+       "9374              NaN            NaN        1.0\n",
+       "9375              NaN            NaN        1.0\n",
+       "9376              NaN            NaN        1.0\n",
+       "9377              NaN            NaN        1.0\n",
+       "9378              NaN            NaN        1.0"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dp.get_ba_data().query('mov_id==\"m101\"')[['bx_sozio_gender','screen_gender','is_female']]"
    ]
   },
   {
@@ -1439,7 +1671,7 @@
     "    mov_berlin = pd.read_csv(self.mov_berlin_path, sep = ';')\n",
     "    mov_dresden = pd.read_csv(self.mov_dresden_path, sep = ';')\n",
     "    mov_mannheim = pd.read_csv(self.mov_mannheim_path, sep = ';')\n",
-    "        \n",
+    "\n",
     "    # Merging (participant numbers repeat so we add the first letter of location)\n",
     "    mov_berlin['location'] = 'berlin'\n",
     "    mov_dresden['location'] = 'dresden'\n",
@@ -1448,15 +1680,15 @@
     "    df['participant'] =  df['location'].str[0] + df.Participant.apply(lambda x: '%03d'%int(x))\n",
     "    df.drop(columns = 'Participant', inplace = True) # Dropping old participant column to avoid mistakes\n",
     "    df['trigger_date'] = pd.to_datetime(df.Trigger_date + ' ' + df.Trigger_time)\n",
-    "    \n",
+    "\n",
     "    # Merging double IDs (for participants with several movisense IDs)\n",
     "    df['participant'] = df.participant.replace(self.get_duplicate_mov_ids())\n",
-    "    \n",
+    "\n",
     "    # Removing pilot participants\n",
     "    df = df[~df.participant.astype(str).str.contains('test')]\n",
     "    df = df[~df.participant.isin(['m157', 'b010', 'b006', 'd001', 'd002', 'd042', 'm024', 'm028', 'm071', 'm079', 'm107'])]\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "    # Adding starting dates to get sampling days\n",
     "    def get_starting_dates(path, pp_prefix = ''):\n",
     "        soup = bs(open(path).read())\n",
@@ -1469,7 +1701,7 @@
     "        df.starting_date.fillna(df.coupling_date,inplace = True)\n",
     "        df['participant'] = pp_prefix + df.participant.apply(lambda x: '%03d'%int(x))\n",
     "        return df\n",
-    "    \n",
+    "\n",
     "    starting_dates = pd.concat([\n",
     "    get_starting_dates(self.mov_berlin_starting_dates_path, 'b'),\n",
     "    get_starting_dates(self.mov_dresden_starting_dates_path, 'd'),\n",
@@ -2166,7 +2398,7 @@
     "    1) We select two-day forms and turn the dataframe into one row per participant-date (Form repetitions on the same day are removed)\n",
     "    2) We reduce all drinking questions to an easily readable dictionary of drink amounts.\n",
     "    3) We add missing data for dates on which we did not receive answers (starting 2 days before starting date up to 365 days after)\n",
-    "    4) We shift answers from retrospective drinking questions backwards to the adequate date (e.g. one day back for yesterday questions) \n",
+    "    4) We shift answers from retrospective drinking questions backwards to the adequate date (e.g. one day back for yesterday questions)\n",
     "    \"\"\"\n",
     "    mov_data = self.get_mov_data().reset_index()\n",
     "    drinking_columns = [c for c in mov_data.columns if c.startswith(\"Anzahl\") and \"10day\" not in c]\n",
@@ -2188,7 +2420,7 @@
     "        df[['starting_date','sampling_day']] = df[['starting_date','sampling_day']].bfill().ffill()\n",
     "        return df\n",
     "    df = df.set_index('date').groupby('participant').apply(add_missing_data).drop(columns='participant').reset_index()\n",
-    "    \n",
+    "\n",
     "    # 3) Shifting back retrospective answers\n",
     "    df['drinks'] = df['drinks_gestern'].shift(-1) # Drinks yesterday get shifted back one day\n",
     "    df['drinks'].fillna(df['drinks_vorgestern'].shift(-2), inplace = True) # Drinks before yesterday shift back two days\n",
@@ -2210,7 +2442,7 @@
     "    df = df.reset_index()\n",
     "    df['sampling_day'] = df.groupby('participant').starting_date.cumcount() + 1\n",
     "    df.index.rename('two_day_index',inplace = True)\n",
-    "    return df[['mov_index','participant','starting_date','date','sampling_day'] + mdbf_columns + ['soziale_isolation','alternative_rewards','craving','limit','control','drinks','g_alc']]"
+    "    return df[['mov_index','participant','starting_date','date','sampling_day'] + mdbf_columns + ['soziale_isolation','alternative_rewards','craving','Limit','limit','Kontrolle','control','drinks','g_alc']]"
    ]
   },
   {
