--- a/notebooks/02_gbe.data_provider.ipynb
+++ b/notebooks/02_gbe.data_provider.ipynb
@@ -3335,7 +3335,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
