--- a/notebooks/11_gbe.rtt.scoring.ipynb
+++ b/notebooks/11_gbe.rtt.scoring.ipynb
@@ -2015,7 +2015,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   }
